--- a/0-DivaHeader2012.tex
+++ b/0-DivaHeader2012.tex
@@ -121,7 +121,7 @@ literate={\$}{{\textcolor{red}{\$}}}1
 \newcommand{\plplot}{\textsf{PlPlot}}
 \newcommand{\tcltk}{\textsf{Tcl/Tk}}
 \newcommand{\divaversion}{4.3}
-\newcommand{\gnuplot\xspace}{\textsf{gnuplot}}
+\newcommand{\gnuplot}{\textsf{gnuplot\xspace}}
 \newcommand{\divawebpage}{http://modb.oce.ulg.ac.be/mediawiki/index.php/DIVA}
 
 \newcommand{\question}{Why do I get this error?}
