--- a/10-DivaPreprocessing.tex
+++ b/10-DivaPreprocessing.tex
@@ -233,7 +233,7 @@ Look into \file{dvdv2diva.f} in \directory{./src/Fortran/Util/} how to write suc
 \section{Creation of contours\label{sec:contourgen}}
 %-------------------------------------------------
 
-As seen in first chapter, a relevant asset of \diva\,is the fact that it takes into account real coastlines and topography of the region of interest. We explain hereinafter the techniques to produce a correct coastline file, of which the description is provided in Sec.  \ref{contourdiva}.
+As seen in first chapter, a relevant asset of \diva is the fact that it takes into account real coastlines and topography of the region of interest. We explain hereinafter the techniques to produce a correct coastline file, of which the description is provided in Sec.  \ref{contourdiva}.
 
 
 \subsection{By hand}
