--- a/19-DivaLinks.tex
+++ b/19-DivaLinks.tex
@@ -13,7 +13,7 @@ SeaDataNet Home Page\\
 \end{minipage}
 
 \item[\raisebox{-4mm}{\includegraphics[height=1cm]{divaico}}] \begin{minipage}{12cm}
-\diva\, Home Page\\
+\diva Home Page\\
 \url{http://modb.oce.ulg.ac.be/mediawiki/index.php/DIVA}
 \end{minipage}
 
