--- a/5-DivaTheory.tex
+++ b/5-DivaTheory.tex
@@ -471,9 +471,8 @@ It can also be used for specifying the covariance for error calculations (Chapte
 
 A summary of the main characteristics of the two methods is found in Tab.~\ref{tabOAVIM}.
 
-
 \begin{table}[htpb]
-\caption{Statistical equivalence between OI and VIM (from \citet{RIXEN00})\label{tabOAVIM}}
+\caption[Statistical equivalence between OI and VIM]{Statistical equivalence between OI and VIM (from \citet{RIXEN00})\label{tabOAVIM}}
 \begin{tabular*}{0.99\textwidth}{@{\extracolsep{\fill}}lll}
 \toprule
 											&		OI	& VIM \\
@@ -507,7 +506,7 @@ All the methods compared here are base on a minimisation of the error estimate e
 The main difference concerns the number of operations, which is almost independent on the number of data for VIM.
 
 \begin{table}[htpb]
-\caption{Characteristics of different methods of data analysis. $\bullet$ denote available features in the interpolation method, ($\bullet$) indicate that the feature is available with some adaptations. $\varepsilon(\mathbf{r})$ is the error estimate, $N_d$ the number of data points, $N_a$ the number of grid points for analysis, $N$ the number of EOFs, $L$ the correlation length and $\signal^2/ \noise^2$ the signal-to-noise ratio.\label{tabdata}}
+\caption[Characteristics of different methods of data analysis.]{Characteristics of different methods of data analysis. $\bullet$ denote available features in the interpolation method, ($\bullet$) indicate that the feature is available with some adaptations. $\varepsilon(\mathbf{r})$ is the error estimate, $N_d$ the number of data points, $N_a$ the number of grid points for analysis, $N$ the number of EOFs, $L$ the correlation length and $\signal^2/ \noise^2$ the signal-to-noise ratio.\label{tabdata}}
 \begin{tabular*}{0.99\textwidth}{@{\extracolsep{\fill}}lcccccccc}
 \toprule
 Method   & $\min(\noise^2)$	& 3-D       & Multivar & Ops/anal.        & $\noise(\mathbf{r})$& \textit{a priori}& C.V. & anis. \\ 
