--- a/8-DivaConstraints.tex
+++ b/8-DivaConstraints.tex
@@ -116,14 +116,14 @@ along front and keeps across front correlation length.
 %--------------------------------------
 
 Adding diffusion makes possible the distinction between up and downwind 
-direction (Fig. \ref{fig:solidrotp}): in this case, higher values are found upwind of the data 
-location: this is natural, because the data is observed and \diva\, tries to 
+direction (Fig.~\ref{fig:solidrotp}): in this case, higher values are found upwind of the data 
+location: this is natural, because the data is observed and \diva tries to 
 infer the field that explains the sample. This requests higher values 
 upwind (because downwind values decrease).
 
 Because of the square in the formulation, to change the flow direction 
 you can simply change the sign of the diffusion coefficient or change 
-the sign of the velocity components (Fig. \ref{fig:solidrotm}).
+the sign of the velocity components (Fig.~\ref{fig:solidrotm}).
 
 \begin{figure}[htpb]
 \parbox{.6\textwidth}{
